[gd_scene load_steps=3 format=3 uid="uid://cpq6hv8wixsvb"]

[ext_resource type="Script" path="res://scenes/locale_switch.gd" id="1_onb4n"]
[ext_resource type="Texture2D" uid="uid://xfxukl0ns8hr" path="res://assets/locales/uk_flag.png" id="2_g0k7e"]

[node name="LocaleSwitch" type="TextureButton"]
texture_normal = ExtResource("2_g0k7e")
script = ExtResource("1_onb4n")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
